--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,6 +13,20 @@
                     <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">
                         {{ .Site.Params.Description}}
                     </p>
+                    <div class="flex flex-row...">
+                    <img src="/images/rubenlogo.png"
+                     class="transition-opacity h-9 w-9 group-hover:opacity-50 group-focus:opacity-70"
+                     alt="{{ .Site.Title }} Logo" 
+                     style="margin: 10px;"/>
+                     <img src="/images/rubenlogo.png"
+                     class="transition-opacity h-9 w-9 group-hover:opacity-50 group-focus:opacity-70"
+                     alt="{{ .Site.Title }} Logo" 
+                     style="margin: 10px;"/>
+                     <img src="/images/rubenlogo.png"
+                     class="transition-opacity h-9 w-9 group-hover:opacity-50 group-focus:opacity-70"
+                     alt="{{ .Site.Title }} Logo" 
+                     style="margin: 10px;"/>
+                    </div>
                 </div>
                 <div class="col-span-6">
                     {{ $hero := resources.GetMatch "images/pages/tailbliss-rocket-indigo.png" }}
@@ -72,52 +86,82 @@
                 </div>
             </div>
         </div>
+        <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-1 lg:items-start lg:gap-24 lg:px-8">
+            <iframe class="video" style="aspect-ratio: 24 / 10;" width="100%" src="http://www.youtube.com/embed/6-ko2AVRjHE" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
 
-    <!-- JITsection -->
+    <div class="bg-gray-200 dark:bg-gray-900">
     <div class="overflow-hidden sm:pt-6 lg:relative">
+        
         <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8">
-            <div>
-                <div class="md:mt-8">
-                    <div class="mt-6 sm:max-w-xl">
-                        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-4xl md:mt-16">
-                            {{ .Site.Params.P2.Heading }}
-                        </h2>
-                        {{ range .Site.Params.P2.Content }}
-                        <p class="pb-12 mt-6 text-lg text-gray-900 dark:text-white">
-                            {{ .text }}
-                        </p>
-                        {{ end }}
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="sm:mx-auto sm:max-w-3xl sm:px-6">
-            <div class="md:py-12 sm:relative sm:mt-12 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-                <div class="hidden sm:block">
-                    <div class="absolute inset-y-0 w-screen left-1/2 rounded-l-3xl bg-gray-50 dark:bg-gray-900/10 lg:left-80 lg:right-0 lg:w-full"></div><svg class="absolute -mr-3 top-8 right-1/2 lg:left-0 lg:m-0" width="404" height="392" fill="none" viewBox="0 0 404 392" loading="lazy">
-                        <defs>
-                            <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                                <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-900/60" fill="currentcolor"></rect>
-                            </pattern>
-                        </defs>
-                        <rect width="404" height="392" fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"></rect>
-                    </svg>
-                </div>
-                <div class="relative pl-4 -mr-40 sm:mx-auto sm:max-w-3xl sm:px-0 lg:h-full lg:max-w-none lg:pl-12">
-                    {{ $p2image := resources.Get .Site.Params.P2.Image }}
-                    {{ with $p2image }}
-                    {{ with .Resize (printf "%dx%d webp q90" .Width .Height) }}
-                    <img imgh src="{{ .RelPermalink }}" width="{{ .Width }}" height="{{ .Height }}" alt="p2" class="w-full rounded-lg shadow-xl lg:h-full lg:w-auto lg:max-w-none" loading="lazy" />
-                    {{ end }}
-                    {{ end }}
-
-                </div>
-            </div>
+            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-4xl md:mt-16">
+                Pakkepriser
+            </h2>
         </div>
     </div>
+    <div class="overflow-hidden sm:pt-6 lg:relative">
+    <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-2 lg:px-8">
+        <div style="background-color: #3034EC; stroke-width: 100px; stroke: blueviolet; border-radius: 15px; margin: 20px;">
+            <div style="padding: 30px; color: white;">
+                <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-2xl">
+                    Basic Beats
+                </h2>
+                <br>
+                Passer for deg som har alt av utstyr og trenger en til å styre spakene og sparke i gang stemningen.
+                <br>
+                <br>
+                <strong>NOK 4 000*</strong>
+            </div>
+        </div>
+        <div style="background-color: #3034EC; stroke-width: 100px; stroke: blueviolet; border-radius: 15px; margin: 20px;">
+            <div style="padding: 40px; color: white;">
+                <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-2xl">
+                    Basic Event
+                </h2><br>
+                Skal du arrangere bryllup eller firmafest? Denne pakken inkluderer 2 topphøytalere, 3 discolys, mixebord og mikrofon.
+                <br>
+                <br>
+                <strong>NOK 10 000**</strong>
+            </div>
+        </div>
+        
+        <div style="background-color: #3034EC; stroke-width: 100px; stroke: blueviolet; border-radius: 15px; margin: 20px;">
+            <div style="padding: 40px; color: white;">
+                <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-2xl">
+                    Standard Event
+                </h2><br>
+                Denne pakken gir mindre lokaler ordentlig klubb stemning. Inkluderer 2 topphøytalere, 1 subwoofer, 4 discolys, mixebord og mikrofon.
+                <br>
+                <br>
+                <strong>NOK 15 000**</strong>
+            </div>
+        </div>
 
+        <div style="background-color: #3034EC; stroke-width: 100px; stroke: blueviolet; border-radius: 15px; margin: 20px;">
+            <div style="padding: 40px; color: white;">
+                <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-2xl">
+                    Premium Event
+                </h2><br>
+                En fest du aldri glemmer! Med 2 topphøytalere, 2 subwoofere, 4 discolys, 6 uplights, 2 moving lights, mixebord og mikrofon gir dansefoten et ekstra gir.
+                <br>
+                <br>
+                <strong>NOK 20 000**</strong>
+            </div>
+        </div>
+      </div>
+      </div>
+      <div class="overflow-hidden">
+        
+        <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-1 lg:gap-12 lg:px-8">
+            <p class="pb-12 mt-6 text-lg text-gray-900 dark:text-white">
+                * Drikke kompenseres i tillegg
+                <br>
+                ** Inkluderer opp- og nedrigg og frakt av utstyr. Mat og drikke kompenseres i tillegg. 
+            </p>
+        </div>
+    </div>
+</div>
 
     <!-- Sponsors section -->
     <div class="max-w-md px-4 mx-auto md:pt-24 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8">
