Fixed youtube url and dark mode

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-1 lg:items-start lg:gap-24 lg:px-8">
-            <iframe class="video" style="aspect-ratio: 24 / 10;" width="100%" src="http://www.youtube.com/embed/6-ko2AVRjHE" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video" style="aspect-ratio: 24 / 10;" width="100%" src="https://www.youtube.com/embed/6-ko2AVRjHE" frameborder="0" allowfullscreen></iframe>
         </div>
         <br>
     </div>
